packages/svelte/tests/validator/samples/ts-unsupported-modifier/input.svelte
<script lang="ts">
	class Foo {
		constructor(private x: number) {}
	}
</script>
