packages/svelte/tests/compiler-errors/samples/ts-annotation-no-lang-attribute/main.svelte
<div class={x as Foo} />